force-app/main/default/objects/Archive_Day_Count__c/Archive_Day_Count__c.object-meta.xml
<CustomObject>
    <description>How many archived records fall on each date, per object and per date basis. This is the report&apos;s answer to &quot;how many records match?&quot; - one SOQL SUM over these rows, instead of enumerating the archive. It exists because Azure Table Storage has no count or aggregate operation of any kind: counting there means reading every matching entity, which for this archive is 9.65M rows, ~9,650 callouts and half an hour. That walk now happens once per object, tallied by date into these rows, and every subsequent question is answered from here. Written by ArchiveCountQueueable; never edited by hand.</description>
    <label>Archive Day Count</label>
    <nameField>
        <displayFormat>ADC-{00000000}</displayFormat>
        <label>Archive Day Count Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Archive Day Counts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>