force-app/main/default/objects/Archive_Day_Count__c/fields/Cache_Key__c.field-meta.xml
<CustomField>
    <fullName>Cache_Key__c</fullName>
    <description>Object, date basis and day joined - e.g. Order_Line_Item__c|ARCHIVED|2026-08-30. Unique and an external id so a rollup can upsert its tally without first querying for what is already there.</description>
    <externalId>true</externalId>
    <label>Cache Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>