force-app/main/default/objects/Archive_Day_Count__c/fields/Counted_At__c.field-meta.xml
<CustomField>
    <fullName>Counted_At__c</fullName>
    <description>When the walk that produced this figure finished. The report shows it, because a rollup is only as current as its last walk and a new archival run makes it stale.</description>
    <label>Counted At</label>
    <type>DateTime</type>
</CustomField>