force-app/main/default/objects/Archive_Day_Count__c/fields/Date_Basis__c.field-meta.xml
<CustomField>
    <fullName>Date_Basis__c</fullName>
    <description>ARCHIVED or CREATED - which date Day refers to. Both are rolled up separately because the report lets the user choose, and for this data they are a year apart: records created in 2025 were archived in 2026.</description>
    <label>Date Basis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>