force-app/main/default/objects/Archive_Day_Count__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <description>The calendar day, on the date basis named alongside. The report sums Row Count across the days its date range covers, which is why the rollup is stored per day rather than as one total per object.</description>
    <label>Day</label>
    <type>Date</type>
</CustomField>