force-app/main/default/objects/Archive_Day_Count__c/fields/First_Row_Key__c.field-meta.xml
<CustomField>
    <fullName>First_Row_Key__c</fullName>
    <description>The NextRowKey half of the cursor recorded in First Partition Key. Table Storage resumes on the pair, so the two are only meaningful together and are always written and read as one.</description>
    <label>First Row Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>