force-app/main/default/objects/Archive_Day_Count__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>The archived object these rows were counted from.</description>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>