force-app/main/default/objects/Archive_Day_Count__c/fields/Row_Count__c.field-meta.xml
<CustomField>
    <fullName>Row_Count__c</fullName>
    <description>Archived records whose date falls on this day. Exact: produced by walking every entity in the archive table, not sampled or estimated.</description>
    <label>Row Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>